# cpplabs

./: README.md
lab1/: CMakeLists.txt  DNA.cpp  DNA.h  Main.cpp  RNA.cpp  RNA.h  main.cpp  tests.cpp
lab1/Google_tests/: CMakeLists.txt  tests.cpp
lab2/: AllWorkers.h  CMakeLists.txt  Dump.cpp  Dump.h  Executor.cpp  Executor.h  Grep.cpp  Grep.h  IOWorker.cpp  IOWorker.h  Parser.cpp  Parser.h  Readfile.cpp  Readfile.h  Replace.cpp  Replace.h  Sort.cpp  Sort.h  Worker.h  Writefile.cpp  Writefile.h  main.cpp
lab4/: CMakeLists.txt  CSVParser.h  main.cpp
